# lined_paper_pdf

./: Cargo.toml  LICENSE  README.md
src/: cmd_line.rs  geometry_def.rs  horizontal_lines_gen.rs  main.rs  pdf_gen.rs  seyes_lines_gen.rs  slant_lines_gen.rs  vertical_lines_gen.rs
src/geometry_def/: coord.rs  mod.rs
test_line_defs/: letter_5mm_square.yml  letter_dashed_6mm.yml  letter_seyes_slant52.yml
