# TODO
# X Check if "lined_paper_pdf" is trademarked - NOT
# X Rename the project to lined_paper_pdf
# X Re-generate Cargo.lock
# X Find if any dependancies use a type of GPL license - NO
# * Choose an OSS license for this project
#   MIT: most popular on npm
#   Apache 2.0: enterprise-friendly: gives patent license
#   GPLv3: copyleft, patent license grant
# * Fix warnings

[package]
name = "lined_paper_pdf"
version = "0.1.0"
authors = ["Stanislav Vitebskiy <svitebskiy@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
printpdf = "0.2.12" # MIT
thiserror = "1.0.6" # MIT or Apache 2.0

# Command line parser & mapper to a struct
clap = "2.33.0"     # MIT
structopt = "0.3"   # MIT or Apache 2.0
serde = { version = "1.0.104", features = ["derive"] } # MIT or Apache 2.0
serde_yaml = "0.8.11"       # MIT or Apache 2.0

[dev-dependencies]
regex = "1.3.1"     # MIT or Apache 2.0